--- a/todo/templates/admin/user_attendance_detail.html
+++ b/todo/templates/admin/user_attendance_detail.html
@@ -208,5 +208,5 @@
     </tbody>
 </table>
 
-<a href="{% url 'admin:staff_attendance_attendance_report' %}" class="back-link">← Orqaga</a>
+<a href="/admin/todo/staff_attendance/attendance-report/" class="back-link">← Orqaga</a>
 {% endblock %}
